--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1102.0",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "fs": "^0.0.1-security",
     "mime": "^3.0.0",
     "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
